--- a/Posttest_KB_4/Steel_Industry.ipynb
+++ b/Posttest_KB_4/Steel_Industry.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4    Weekday      Monday  Light_Load  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
       "(Data sebelum Di Standarisasi)\n",
       "24940.178427589486\n",
       "\n",
-      "(Data sebelum Di Standarisasi)\n",
+      "(Data sesudah Di Standarisasi)\n",
       "1.0\n"
      ]
     }
@@ -396,7 +396,7 @@
     "print(\"(Data sebelum Di Standarisasi)\")\n",
     "print(np.std(df['NSM']))\n",
     "print()\n",
-    "print(\"(Data sebelum Di Standarisasi)\")\n",
+    "print(\"(Data sesudah Di Standarisasi)\")\n",
     "print(np.std(df_3['NSM']))\n"
    ]
   },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -436,47 +436,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 35040 entries, 0 to 35039\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column                                Non-Null Count  Dtype  \n",
-      "---  ------                                --------------  -----  \n",
-      " 0   date                                  35040 non-null  object \n",
-      " 1   Usage_kWh                             35040 non-null  float64\n",
-      " 2   Lagging_Current_Reactive.Power_kVarh  35040 non-null  float64\n",
-      " 3   Leading_Current_Reactive_Power_kVarh  35040 non-null  float64\n",
-      " 4   CO2(tCO2)                             35040 non-null  float64\n",
-      " 5   Lagging_Current_Power_Factor          35040 non-null  float64\n",
-      " 6   Leading_Current_Power_Factor          35040 non-null  float64\n",
-      " 7   NSM                                   35040 non-null  int64  \n",
-      " 8   WeekStatus                            35040 non-null  object \n",
-      " 9   Day_of_week                           35040 non-null  object \n",
-      " 10  Load_Type                             35040 non-null  object \n",
-      "dtypes: float64(6), int64(1), object(4)\n",
-      "memory usage: 2.9+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
    ]
   },
   {
@@ -488,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +492,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +530,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +567,7 @@
        "1"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +656,7 @@
        "1    Weekday      Monday  Light_Load  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +676,7 @@
        "0"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -771,18 +737,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['Light_Load', 'Medium_Load', 'Maximum_Load'], dtype=object)"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'OneHotEncoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\Document Perkuliahan\\KULIAH\\Kecerdasan Buatan\\Posttest\\Posttest_KB_4\\Steel_Industry.ipynb Cell 37\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/Document%20Perkuliahan/KULIAH/Kecerdasan%20Buatan/Posttest/Posttest_KB_4/Steel_Industry.ipynb#X52sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ohe \u001b[39m=\u001b[39m OneHotEncoder(sparse\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Document%20Perkuliahan/KULIAH/Kecerdasan%20Buatan/Posttest/Posttest_KB_4/Steel_Industry.ipynb#X52sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df_5\u001b[39m.\u001b[39mLoad_Type\u001b[39m.\u001b[39munique()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'OneHotEncoder' is not defined"
+     ]
     }
    ],
    "source": [
@@ -792,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
